- unrequested package list management (for orphans) (mga#7167):
  o do not wrongly tell we updated the unrequested package list when we didn't
    (eg: when not having the proper rights such as running urpmq as !root)

Version 7.4 - 24 August 2012

- decrease total package count when some files are missing
- fix installing a package if user acks bogus signature
  (regression introduced in 7.0)
- security:
  o warn about missing signatures on packages from media without signatures
  o warn when a medium has no signature
  o warn when signature checking is disabled per medium

Version 7.3 - 24 August 2012

- only search for README.urpmi files in doc files (needs URPM >= 4.13)

Version 7.2 - 29 June 2012

- urpme: simplify traversing DB (needs URPM >= 4.10)

Version 7.1 - 13 June 2012

- adapt to URPM-4.2

Version 7.0 - 8 June 2012

- adapt to perl-5.16.0
- adapt to rpm-4.10.0
- enhance man pages caption (inspirated by mdv)
- fix testsuite regressions
- o make 'basename' option work again for rpmdrake
- urpmi:
  o do not try to run gmessage as gtkdialogs is not packaged in Mga
  o drop support for --gui (no more used by drakx)
  o heavy refactorization
- urpmi.cfg:
  o support --download-all as an option (Pavel Shved)
- urpmf:
  o fix -m option not showing media names (mga#5916)

Version 6.48.1 - 23 April 2012

- urpmi:
  o do not print orphans message when no package is orphan (mga#4715)
- kill mdv reference in man pages (#5277)

Version 6.48 - 26 March 2012

- fix a debug message
- fix downloading twice noarch packages on x86_64 with --download-all (mga#4867)
- gurpmi:
  o install perl-{Glib,Gtk2} as priority upgrades prior to restart (mga#5066)
- updated translations

Version 6.47 - 19 March 2012

- bash completion:
  o bump available packages list speed (mga#373)
  o fix installed packages completion (mga#4937)
- urpmi:
  o fix column headers alignment to the columns values in package list

Version 6.46 - 5 March 2012
