@@ -1,6 +1,7 @@
 - unrequested package list management (for orphans) (mga#7167):
   o do not wrongly tell we updated the unrequested package list when we didn't
     (eg: when not having the proper rights such as running urpmq as !root)
+  o only write the unrequested package list file if the list actually changed
 
 Version 7.4 - 24 August 2012
 
